updated app a bit

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "sdkVersion": "24.0.0",
-    "name": "JarUp",
+    "name": "Illume",
     "description": "Uppers for your mood.",
     "version": "0.0.1",
     "icon": "./assets/icons/icon.png",
