--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^24.0.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-modal": "^5.2.0",
     "reason-react": "^0.3.2"
   }
 }
