--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "dependencies": {
     "bs-json": "^1.0.1",
     "bs-platform": "^2.2.2",
-    "bs-react-native": "^0.5.0",
-    "expo": "^24.0.0",
+    "bs-react-native": "https://github.com/GTDev87/bs-react-native",
+    "expo": "25.0.0",
     "native-base": "^2.3.10",
-    "react": "16.0.0",
-    "react-native": "0.51.0",
+    "react": "16.2.0",
+    "react-native": "0.52.0",
     "react-native-animatable": "^1.2.4",
     "react-native-modal": "^5.2.0",
     "reason-react": "^0.3.2"
