--- a/app.json
+++ b/app.json
@@ -3,16 +3,18 @@
     "sdkVersion": "25.0.0",
     "name": "Illume",
     "description": "Uppers for your mood.",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "icon": "./assets/icons/logo.png",
     "loading": {
       "hideExponentText": true,
     },
     "ios": {
-      "bundleIdentifier": "com.illume.illume"
+      "bundleIdentifier": "com.illume.illume",
+      "supportsTablet": false
     },
     "android": {
       "package": "com.illume.illume",
+      "versionCode": 2,
       "permissions": []
     }
   }
